# mts_sms_back

./: .gitignore  README.md  dotenv_.py  main.py  pyproject.toml  requirements.txt
sms-postman/: __init__.py
sms_postman/: apps.py  files.py  views.py
sms_postman/forms/: form_message.py
sms_postman/static/scripts/: main-792-51352717b8978e745511.js  main-main-3b2d6b287278dc05d70c.js  main-main-a4d53f853b37acef5072.js
sms_postman/static/styles/: style.css
sms_postman/templates/: index.html
